--- a/public/asset/style-admin.css
+++ b/public/asset/style-admin.css
@@ -12,14 +12,20 @@ html {
   margin: 0;
   box-sizing: border-box;
   outline: none;
-  border: none;
+  /* border: none; */
   text-decoration: none;
 }
 
 body {
   font-family: "Poppins", sans-serif;
-  /* color: #d8f0a5, peachpuff; */
-  background-color: #89cff0;
+  background-image: linear-gradient(
+    to right,
+    #b163f2,
+    #834cba,
+    #5a3683,
+    #352050,
+    #160822
+  );
 }
 
 /*navbar*/
@@ -28,13 +34,13 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 5%;
-  background-color: #89cff0;
+  background-color: #160822;
+
   position: fixed;
   left: 0;
   right: 0;
   top: 0;
   z-index: 9999;
-  border-bottom: 0.2rem solid #3bb3eb;
 }
 
 .navbar .navbar-logo {
@@ -45,8 +51,8 @@ body {
 }
 
 .navbar .navbar-menu {
-  border: 0.2rem solid #3bb3eb;
-  background-color: #3bb3eb;
+  border: 0.2rem solid #5a3683;
+  background-color: #5a3683;
   border-radius: 1.5rem;
 }
 
@@ -60,7 +66,7 @@ body {
 }
 
 .navbar .navbar-menu a:hover {
-  color: #9cf089;
+  color: #b163f2;
 }
 
 .navbar .navbar-logout a {
@@ -70,67 +76,107 @@ body {
 }
 
 .navbar .navbar-logout a:hover {
-  color: #9cf089;
+  color: #b163f2;
 }
 
-/* home section */
-.home {
+/* slider section */
+.slider {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.slider-container .slider-item {
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  flex: 1;
-  padding: 1rem 5%;
 }
 
-.home .content {
-  flex: 0.5;
-  margin: 7rem;
-  padding-bottom: 1rem;
-  border-bottom: 0.7rem solid;
-  border-image: linear-gradient(to right, #f0de89 20%, #3bb3eb 60%, #9cf089 70%)
-    4;
+.slider-container .slider-item::before {
+  inset: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: linear-gradient(
+    to top,
+    black,
+    rgba(0, 0, 0, 0.592),
+    transparent
+  );
 }
 
-.home .content h1 {
+.slider-container .slider-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slider-container .slider-item .slider-content {
+  position: absolute;
+  color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+
+.slider-item .slider-content .slider-title {
   font-size: 3rem;
-  /* font-style: italic; */
-  color: white;
-  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
-  line-height: 4rem;
 }
 
-.home .content p {
-  font-size: 1rem;
-  color: white;
-  margin-top: 1rem;
-  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
-  line-height: 1.5rem;
-  font-weight: 100;
+.slider-item .slider-content .slider-description {
+  width: 50ch;
 }
 
-.home .img {
-  width: 400px;
-  flex: 0.5;
-  margin: 7rem;
+.slider-item .slider-content .slider-action {
+  color: black;
+  background-color: white;
+  padding: 0.5rem 1.5rem;
+  font-size: 1.1rem;
+  text-decoration: none;
+  letter-spacing: 3px;
+  width: fit-content;
+  position: relative;
+  isolation: isolate;
+  font-weight: 800;
+}
+
+.slider-content .slider-action::before {
+  content: "";
+  background-color: #b163f2;
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  width: 0;
+  transition: all 500ms;
+}
+
+.slider-content .slider-action:hover::before {
+  width: 100%;
+  color: #b163f2;
 }
 
 /* variabel section */
 .variabel {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   color: black;
   background-color: #fff2;
   border-radius: 1rem;
-  margin-left: 10rem;
-  margin-right: 10rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
   padding-bottom: 0.1rem;
+  padding-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 .variabel .table-title {
   text-align: center;
-  background-color: #3bb3eb;
+  color: white;
+  background-color: #160822;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
   padding: 0.8rem;
@@ -165,7 +211,102 @@ tr {
   text-align: left;
 }
 
+.variabel .table td a {
+  display: inline-block;
+}
+
+.variabel .table .tombol-sukses {
+  display: flex;
+  background-color: #5a3683;
+  align-items: center;
+  padding: 0.5rem;
+  font-size: 16px;
+  margin-right: 0.5rem;
+  border-radius: 0.8rem;
+  border: none;
+  color: white;
+}
+
+.variabel .table .tombol-sukses svg.feather {
+  padding-right: 0.4rem;
+}
+
 .variabel .table tr:nth-child(even) {
+  background-color: white;
+}
+
+/* pegawai section */
+.pegawai {
+  box-sizing: border-box;
+  color: black;
+  background-color: #fff2;
+  border-radius: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  padding-bottom: 0.1rem;
+  padding-top: 5rem;
+  margin-bottom: 10rem;
+}
+
+.pegawai .table-title {
+  text-align: center;
+  color: white;
+  background-color: #160822;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  padding: 0.8rem;
+}
+
+.pegawai .table {
+  padding: 1rem;
+  margin: 1rem;
+  overflow: auto;
+  background-color: #fff9;
+  border-radius: 1rem;
+}
+
+.pegawai .table table {
+  padding: 0.5rem;
+  font-size: 1rem;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.pegawai .table th,
+td,
+tr {
+  padding: 0.5rem;
+}
+
+.pegawai .table th {
+  /* position: sticky; */
+  top: 0;
+  left: 0;
+  background-color: white;
+  text-align: left;
+}
+
+.pegawai .table td a {
+  display: inline-block;
+}
+
+.pegawai .table .tombol-sukses {
+  display: flex;
+  background-color: #5a3683;
+  align-items: center;
+  padding: 0.5rem;
+  font-size: 16px;
+  margin-right: 0.5rem;
+  border-radius: 0.8rem;
+  border: none;
+  color: white;
+}
+
+.pegawai .table .tombol-sukses svg.feather {
+  padding-right: 0.4rem;
+}
+
+.pegawai .table tr:nth-child(even) {
   background-color: white;
 }
 
@@ -173,9 +314,10 @@ tr {
 footer {
   text-align: center;
   background-color: white;
-  color: #3bb3eb;
-  padding: 0.7rem;
-  margin-top: 3rem;
+  color: #b163f2;
+  padding-top: 0.7rem;
+  padding-bottom: 0.7rem;
+  margin: 0;
 }
 
 footer .credit span {
