--- a/public/asset/style-login.css
+++ b/public/asset/style-login.css
@@ -100,3 +100,44 @@ body {
   margin-top: 2rem;
   font-size: 16px;
 }
+
+@media (max-width: 480px) {
+  .login {
+    width: 90%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 2rem;
+  }
+
+  .login h1 {
+    font-size: 24px;
+  }
+
+  .login .input {
+    height: 45px;
+    margin: 20px 0;
+  }
+
+  .input input {
+    font-size: 14px;
+    padding-left: 0.8rem;
+  }
+
+  .login .button {
+    height: 40px;
+    font-size: 15px;
+  }
+
+  .login .remember-forgot {
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+    font-size: 12px;
+  }
+
+  body {
+    padding: 1rem;
+    background-size: cover;
+    background-position: center;
+  }
+}
