--- a/public/asset/style-voter.css
+++ b/public/asset/style-voter.css
@@ -5,7 +5,7 @@ body {
 }
 
 .header {
-  background-color: #958dc3;
+  background-color: #bdb2ff;
   display: flex;
   justify-content: space-between;
   align-items: center;
